--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heat Transfer Coefficient Predictor</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -15,187 +14,59 @@
         }
 
         :root {
-            --primary: #6366f1;
-            --primary-dark: #4f46e5;
-            --secondary: #8b5cf6;
-            --accent: #ec4899;
-            --success: #10b981;
-            --bg-start: #0f172a;
-            --bg-end: #1e293b;
-            --card-bg: rgba(255, 255, 255, 0.95);
-            --text: #1e293b;
-            --text-light: #64748b;
-            --border: #e2e8f0;
+            --primary: #E43D12;
+            --secondary: #D6536D;
+            --accent: #FFA2B6;
+            --highlight: #EFB11D;
+            --bg: #EBE9E1;
+            --card: #FFFFFF;
+            --text: #2C2C2C;
+            --text-light: #6B6B6B;
         }
 
         body {
             font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, var(--bg-start) 0%, var(--bg-end) 100%);
+            background-color: var(--bg);
             color: var(--text);
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 2rem;
-            position: relative;
-            overflow-x: hidden;
-        }
-
-        /* Animated Background Gradient */
-        body::before {
-            content: '';
-            position: fixed;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle at 20% 50%, rgba(99, 102, 241, 0.15) 0%, transparent 50%),
-                radial-gradient(circle at 80% 80%, rgba(139, 92, 246, 0.15) 0%, transparent 50%),
-                radial-gradient(circle at 40% 20%, rgba(236, 72, 153, 0.1) 0%, transparent 50%);
-            animation: gradient-shift 15s ease infinite;
-            z-index: -1;
-        }
-
-        @keyframes gradient-shift {
-
-            0%,
-            100% {
-                transform: translate(0, 0) rotate(0deg);
-            }
-
-            33% {
-                transform: translate(5%, -5%) rotate(1deg);
-            }
-
-            66% {
-                transform: translate(-5%, 5%) rotate(-1deg);
-            }
         }
 
         .container {
-            background: var(--card-bg);
-            backdrop-filter: blur(20px);
+            background: var(--card);
             padding: 3rem;
-            border-radius: 2rem;
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25),
-                0 0 0 1px rgba(255, 255, 255, 0.1);
+            border-radius: 16px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
             width: 100%;
             max-width: 600px;
-            position: relative;
-            animation: slideUp 0.6s ease-out;
-        }
-
-        @keyframes slideUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .container::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 6px;
-            background: linear-gradient(90deg, var(--primary), var(--secondary), var(--accent));
-            border-radius: 2rem 2rem 0 0;
-            background-size: 200% 100%;
-            animation: gradient-flow 3s ease infinite;
-        }
-
-        @keyframes gradient-flow {
-
-            0%,
-            100% {
-                background-position: 0% 50%;
-            }
-
-            50% {
-                background-position: 100% 50%;
-            }
         }
 
         h1 {
-            font-size: 2.25rem;
-            font-weight: 800;
-            text-align: center;
-            margin-bottom: 2.5rem;
-            background: linear-gradient(135deg, var(--primary), var(--secondary));
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
+            font-size: 2rem;
+            font-weight: 700;
+            color: var(--primary);
+            margin-bottom: 0.5rem;
             letter-spacing: -0.02em;
-            position: relative;
         }
 
-        h1::after {
-            content: '';
-            position: absolute;
-            bottom: -10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 60px;
-            height: 4px;
-            background: linear-gradient(90deg, var(--primary), var(--accent));
-            border-radius: 2px;
+        .subtitle {
+            color: var(--text-light);
+            font-size: 0.95rem;
+            margin-bottom: 2.5rem;
         }
 
         .form-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 1.25rem;
+            gap: 1.5rem;
+            margin-bottom: 2rem;
         }
 
         .form-group {
             position: relative;
-            animation: fadeIn 0.5s ease-out backwards;
-        }
-
-        .form-group:nth-child(1) {
-            animation-delay: 0.1s;
-        }
-
-        .form-group:nth-child(2) {
-            animation-delay: 0.15s;
-        }
-
-        .form-group:nth-child(3) {
-            animation-delay: 0.2s;
-        }
-
-        .form-group:nth-child(4) {
-            animation-delay: 0.25s;
-        }
-
-        .form-group:nth-child(5) {
-            animation-delay: 0.3s;
-        }
-
-        .form-group:nth-child(6) {
-            animation-delay: 0.35s;
-        }
-
-        .form-group:nth-child(7) {
-            animation-delay: 0.4s;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(10px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
         }
 
         .form-group.full-width {
@@ -207,54 +78,49 @@
             align-items: center;
             font-size: 0.875rem;
             font-weight: 600;
-            margin-bottom: 0.625rem;
+            margin-bottom: 0.5rem;
             color: var(--text);
-            letter-spacing: -0.01em;
         }
 
         .info-icon {
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            width: 18px;
-            height: 18px;
+            width: 16px;
+            height: 16px;
             border-radius: 50%;
-            background: linear-gradient(135deg, #e0e7ff, #ddd6fe);
-            color: var(--primary);
-            font-size: 11px;
+            background-color: var(--accent);
+            color: white;
+            font-size: 10px;
             font-weight: 700;
-            margin-left: 8px;
+            margin-left: 6px;
             cursor: help;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 0 2px 4px rgba(99, 102, 241, 0.2);
+            transition: all 0.2s;
         }
 
         .info-icon:hover {
-            background: linear-gradient(135deg, var(--primary), var(--secondary));
-            color: white;
-            transform: scale(1.1) rotate(10deg);
-            box-shadow: 0 4px 12px rgba(99, 102, 241, 0.4);
+            background-color: var(--secondary);
+            transform: scale(1.1);
         }
 
         .tooltip {
             position: absolute;
-            bottom: calc(100% + 12px);
+            bottom: calc(100% + 8px);
             left: 50%;
-            transform: translateX(-50%) translateY(5px);
-            background: linear-gradient(135deg, #1e293b 0%, #334155 100%);
+            transform: translateX(-50%);
+            background-color: var(--text);
             color: white;
-            padding: 0.75rem 1rem;
-            border-radius: 0.75rem;
+            padding: 0.625rem 0.875rem;
+            border-radius: 8px;
             font-size: 0.75rem;
-            line-height: 1.5;
-            width: 220px;
+            line-height: 1.4;
+            width: 200px;
             text-align: center;
             opacity: 0;
             visibility: hidden;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: all 0.2s;
             z-index: 10;
             pointer-events: none;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
             font-weight: 500;
         }
 
@@ -263,137 +129,94 @@
             position: absolute;
             top: 100%;
             left: 50%;
-            margin-left: -6px;
-            border-width: 6px;
+            margin-left: -4px;
+            border-width: 4px;
             border-style: solid;
-            border-color: #1e293b transparent transparent transparent;
+            border-color: var(--text) transparent transparent transparent;
         }
 
         .info-icon:hover+.tooltip {
             opacity: 1;
             visibility: visible;
-            transform: translateX(-50%) translateY(0);
         }
 
         input {
             width: 100%;
-            padding: 0.875rem 1rem;
-            border: 2px solid var(--border);
-            border-radius: 0.875rem;
+            padding: 0.75rem 1rem;
+            border: 2px solid #E5E5E5;
+            border-radius: 8px;
             font-size: 0.95rem;
             font-family: 'Inter', sans-serif;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            background: #fafafa;
-            font-weight: 500;
+            transition: border-color 0.2s;
+            background: white;
         }
 
         input:focus {
             outline: none;
             border-color: var(--primary);
-            background: white;
-            box-shadow: 0 0 0 4px rgba(99, 102, 241, 0.1),
-                0 2px 8px rgba(99, 102, 241, 0.15);
-            transform: translateY(-1px);
         }
 
         input::placeholder {
-            color: #94a3b8;
+            color: #AFAFAF;
         }
 
         button {
             width: 100%;
-            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+            background-color: var(--primary);
             color: white;
-            padding: 1.125rem;
+            padding: 1rem;
             border: none;
-            border-radius: 1rem;
+            border-radius: 8px;
             font-size: 1rem;
-            font-weight: 700;
+            font-weight: 600;
             cursor: pointer;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            margin-top: 2rem;
-            box-shadow: 0 8px 16px rgba(99, 102, 241, 0.3);
-            letter-spacing: 0.02em;
-            position: relative;
-            overflow: hidden;
-        }
-
-        button::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
-            transition: left 0.5s;
-        }
-
-        button:hover::before {
-            left: 100%;
+            transition: background-color 0.2s;
+            font-family: 'Inter', sans-serif;
         }
 
         button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 12px 24px rgba(99, 102, 241, 0.4);
+            background-color: #C63510;
         }
 
         button:active {
-            transform: translateY(0);
+            transform: scale(0.98);
         }
 
         button:disabled {
-            opacity: 0.7;
+            opacity: 0.6;
             cursor: not-allowed;
-            transform: none;
         }
 
         #result {
             margin-top: 2rem;
             padding: 2rem;
-            border-radius: 1.25rem;
-            background: linear-gradient(135deg, #d1fae5 0%, #a7f3d0 100%);
-            border: 2px solid #6ee7b7;
+            border-radius: 12px;
+            background-color: #FFF9F5;
+            border: 2px solid var(--highlight);
             display: none;
             text-align: center;
-            animation: resultSlideUp 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 0 10px 25px rgba(16, 185, 129, 0.2);
-        }
-
-        @keyframes resultSlideUp {
-            from {
-                opacity: 0;
-                transform: translateY(20px) scale(0.95);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0) scale(1);
-            }
         }
 
         .result-label {
             font-size: 0.875rem;
-            font-weight: 700;
-            color: #047857;
+            font-weight: 600;
+            color: var(--text-light);
+            margin-bottom: 0.5rem;
             text-transform: uppercase;
-            letter-spacing: 0.1em;
-            margin-bottom: 0.75rem;
+            letter-spacing: 0.05em;
         }
 
         .result-value {
-            font-size: 3rem;
-            font-weight: 900;
-            color: #059669;
-            line-height: 1;
-            margin-bottom: 0.5rem;
-            letter-spacing: -0.02em;
+            font-size: 2.5rem;
+            font-weight: 700;
+            color: var(--primary);
+            margin-bottom: 0.25rem;
         }
 
         .unit {
-            font-size: 1.125rem;
-            color: #047857;
-            font-weight: 600;
+            font-size: 1rem;
+            color: var(--text-light);
+            font-weight: 500;
         }
 
         @media (max-width: 640px) {
@@ -410,7 +233,7 @@
             }
 
             h1 {
-                font-size: 1.875rem;
+                font-size: 1.75rem;
             }
         }
     </style>
@@ -419,6 +242,8 @@
 <body>
     <div class="container">
         <h1>HTC Predictor</h1>
+        <p class="subtitle">Predict heat transfer coefficient using machine learning</p>
+
         <form id="predictForm">
             <div class="form-grid">
                 <div class="form-group">
@@ -485,10 +310,11 @@
                     <input type="number" step="0.00001" name="mu" required placeholder="e.g. 0.00901">
                 </div>
             </div>
-            <button type="submit">Predict Heat Transfer Coefficient</button>
+            <button type="submit">Predict</button>
         </form>
+
         <div id="result">
-            <div class="result-label">Predicted HTC</div>
+            <div class="result-label">Heat Transfer Coefficient</div>
             <div class="result-value" id="predictionValue">0.00</div>
             <div class="unit">W/(m²·K)</div>
         </div>
@@ -521,36 +347,16 @@
             setTimeout(() => {
                 try {
                     const prediction = predict(inputs);
-
-                    const targetValue = prediction;
-                    const displayElem = document.getElementById('predictionValue');
+                    document.getElementById('predictionValue').innerText = prediction.toFixed(2);
                     document.getElementById('result').style.display = 'block';
-
-                    let startTimestamp = null;
-                    const duration = 1500;
-
-                    const step = (timestamp) => {
-                        if (!startTimestamp) startTimestamp = timestamp;
-                        const progress = Math.min((timestamp - startTimestamp) / duration, 1);
-                        const easeOutQuart = 1 - Math.pow(1 - progress, 4);
-                        const currentVal = easeOutQuart * targetValue;
-                        displayElem.innerText = currentVal.toFixed(2);
-
-                        if (progress < 1) {
-                            window.requestAnimationFrame(step);
-                        }
-                    };
-
-                    window.requestAnimationFrame(step);
-
                 } catch (error) {
-                    alert('Error calculating prediction: ' + error);
+                    alert('Error: ' + error);
                     console.error(error);
                 } finally {
                     btn.innerText = originalText;
                     btn.disabled = false;
                 }
-            }, 300);
+            }, 200);
         });
     </script>
 </body>
